--- a/css/login.css
+++ b/css/login.css
@@ -3,10 +3,140 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+*{
+    padding: auto;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body{
     background-color: #F5F5F7;
-    background-size:cover;   
-    background-position: center;
+}
+footer{
+    border-top: rgba(128, 128, 128, 0.418) solid 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    bottom: 0;
+}
+@media screen and (max-width: 350px){
+    footer{
+        height: 50px;
+    }
+}
+.text-rights{
+    font-size: 15px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    margin-left: 5px;
+    font-weight: 500;
+    color: #8a8a8a;
+}
+button.button-Harassment{
+    position: absolute;
+    bottom: 150px;
+    right: 67px;
+    cursor: pointer;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.301);
+}
+button.button-Harassment:hover{
+    box-shadow: 0 0 0;
+}
+@media screen and (max-width: 350px){
+    button.button-Harassment{
+        right: 34px;
+    }
+}
+.button-Harassment{
+    background-color: gold;
+    border: none;
+    z-index: 1;
+    outline: none;
+    color: #000;
+    padding: 20px;
+    font-size: 20px;
+    font-family: "Roboto", sans-serif;
+    text-transform: capitalize;
+    letter-spacing: 3px;
+    font-weight: 430;
+}
+.button-Harassment::after{
+    content: "";
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: gold;
+    left: 0;
+    top: 0;
+}
+.button-Harassment::before{
+    content: "";
+    background: linear-gradient(
+        45deg,
+        #fff, #FFFB0A, #110A04, #E0DD00
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 600%;
+    z-index: -1;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    filter: blur(8px);
+    animation: glowing 20s linear infinite;
+    transition: opacity .3s ease-in-out;
+    opacity: 0;
+}
+.button-Harassment:hover::before{
+    opacity: 1;
+}
+.button-Harassment:hover{
+    color: #fff;
+}
+.button-Harassment::after{
+    background: transparent;
+}
+@keyframes glowing{
+    0%{background-position: 0 0;}
+    50%{background-position: 400% 0;}
+    100%{background-position: 0 0;}
+}
+section.footer-icons{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 455px;
+    width: 100%;
+    height: 55px;
+}
+@media screen and (max-width: 350px){
+    section.footer-icons{
+        top: 394px;
+    }
+}
+
+.footer-icons .share img{
+    width: 60px;
+    height: 60px;
+    margin: 0.3rem;
+    cursor: pointer;
+    border-radius: 50%;
+    padding: 1rem;
+    transition: 0.4s linear;
+}
+.footer-icons .share img:hover{
+    background-color: gold;
+}
+.footer-icons a{
+    border: none;
+    text-decoration: none;
+    outline: none;
 }
 .formulario > img{
     position: relative;
@@ -32,7 +162,7 @@ body{
     position: relative;
     bottom: 55px;
     margin-bottom: 10px; /* Espaçamento entre campos */
-    font-family: 'poppins' sans-serif;
+    font-family: 'poppins', sans-serif;
 }
 .campo .images{
     cursor: pointer;
@@ -64,7 +194,7 @@ body{
     }
 }
 
-button:hover{
+.campo button:hover{
     animation-name: anima;
     animation-duration: 0.5s;
     animation-timing-function: ease-in-out;
