--- a/css/login.css
+++ b/css/login.css
@@ -11,9 +11,11 @@
 
 body{
     background-color: #F5F5F7;
+    overflow: scroll;
 }
 footer{
     border-top: rgba(128, 128, 128, 0.418) solid 3px;
+    background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,6 +23,7 @@ footer{
     height: 30px;
     position: absolute;
     bottom: 0;
+    cursor: pointer;
 }
 @media screen and (max-width: 350px){
     footer{
@@ -35,6 +38,7 @@ footer{
     font-weight: 500;
     color: #8a8a8a;
 }
+
 button.button-Harassment{
     position: absolute;
     bottom: 150px;
@@ -45,11 +49,8 @@ button.button-Harassment{
 button.button-Harassment:hover{
     box-shadow: 0 0 0;
 }
-@media screen and (max-width: 350px){
-    button.button-Harassment{
-        right: 34px;
-    }
-}
+
+
 .button-Harassment{
     background-color: gold;
     border: none;
@@ -77,7 +78,7 @@ button.button-Harassment:hover{
     content: "";
     background: linear-gradient(
         45deg,
-        #fff, #FFFB0A, #110A04, #E0DD00
+        #ffffff96, #FFFB0A, #110A04, #E0DD00
     );
     position: absolute;
     top: -2px;
@@ -105,26 +106,76 @@ button.button-Harassment:hover{
     50%{background-position: 400% 0;}
     100%{background-position: 0 0;}
 }
+
 section.footer-icons{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    position: relative;
-    top: 455px;
+    margin-top: 22.3rem;
     width: 100%;
-    height: 55px;
+    
 }
-@media screen and (max-width: 350px){
+/*telas menores 400px*/
+@media only screen and (max-width: 415px){
     section.footer-icons{
-        top: 394px;
+        margin-top: 14rem;
+    }
+}
+/*telas menores 395px*/
+@media only screen and (max-width: 395px){
+    section.footer-icons{
+        margin-top: 22rem;
+    }
+}
+
+
+
+/*telas menores 440px*/
+@media only screen and (max-width: 440px){
+    section.footer-icons{
+        margin-top: 25rem;
+    }
+}
+
+/*telas menores 550px*/
+@media only screen and (max-width: 550px){
+    section.footer-icons{
+        margin-top: 15rem;
+    }
+}
+
+/*telas menores 370px*/
+@media only screen and (max-width: 370px){
+    section.footer-icons{
+        margin-top: 16rem;
+    }
+}
+
+/*telas menores 350px*/
+@media only screen and (max-width: 350px){
+    section.footer-icons{
+        margin-top: 22rem;
+    }
+}
+
+/*telas maiores 1030px*/
+@media only screen and (max-width: 1030px){
+    section.footer-icons{
+        margin-top: 8.5rem;
+    }
+}
+
+/*telas maiores 1290px*/
+@media only screen and (max-width: 1290px){
+    section.footer-icons{
+        margin-top: 20rem;
     }
 }
 
 .footer-icons .share img{
     width: 60px;
     height: 60px;
-    margin: 0.3rem;
     cursor: pointer;
     border-radius: 50%;
     padding: 1rem;
@@ -150,7 +201,7 @@ section.footer-icons{
     top: 120px;
     background: rgb(255, 255, 255);
     border:2px solid rgba(211, 211, 211, 0.493) ;
-    border-radius: 8px;
+    border-radius: 10px;
     max-width: 500px; /* Ajuste o máximo conforme necessário */
     text-align: center;
     margin: 0 auto; /* Centraliza o formulário na página */
@@ -179,9 +230,9 @@ section.footer-icons{
     border: none;
     width: calc(100% - 110px);
     border-radius: 10px;
-    position: relative;
-    left: 3px;
     cursor: pointer;
+    position: relative;
+    left: 2px;
 }
 
 @keyframes anima{
@@ -193,17 +244,19 @@ section.footer-icons{
         transform: scale(1.05);
     }
 }
+.campo button:focus{
+cursor: wait;
+}
 
 .campo button:hover{
     animation-name: anima;
     animation-duration: 0.5s;
     animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    animation-iteration-count:infinite;
+    animation-direction:alternate;
 }
 label {
-    display: inline-block;
-   
+       display: inline-block;
 }
 input {
     width: calc(100% - 110px); /* Calcula a largura dos inputs considerando o width do label */
