--- a/paginas/treinamento/cursos.css
+++ b/paginas/treinamento/cursos.css
@@ -1,5 +1,21 @@
 *{
-    padding: 0;
-    margin-top: 10px;
+    text-decoration: none;
+    list-style: none;
     box-sizing: border-box;
+}
+ul {
+    text-align: center;
+}
+ul#cursos-list{
+    position: absolute;
+    top: 90px;
+    left: 0%;
+    display: flex;
+    gap: 50px;
+}
+ul#cursos-list{
+    width: 135px;
+    height: 200px;
+    position: relative;
+    z-index: 3;
 }
