--- a/index.css
+++ b/index.css
@@ -1,41 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-body{
-    background-color: #F5F5F7;
-    overflow: scroll;
-}
-main > img{
-    width: 280px;
-    height: 200px;
-    cursor: pointer;
+    
+    
+    
 }
 
-section.Login-conect{
+body {
+    background-color: #003049;
+    margin: 0;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
-    align-items: end;
-    position: relative;
-    bottom: 50px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    overflow: hidden;
 }
-.container-father{
-    margin-right: 15%;
-    background-color: #13222b;
+@media screen and (max-width: 770px){
+    body{
+        flex-direction: column;
+    }
+}
+
+header {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 320px;
+    margin-right: 150px;
+}
+@media screen and (max-width: 770px){
+    header{
+        margin-right: 0;
+        margin-bottom: 0px;
+        position: relative;
+        top: 60px;
+    }
+}
+header img {
+    width: 100%;
+    max-width: 420px;
+    height: auto;
+    cursor: pointer;
+}
+div.text-login{
+    position: relative;
+    right: 550px;
+    top: 100px;
+}
+div h1.title-login{
+    color: #fff;
+    font-family: 'poppins', sans-serif;
+    text-transform: capitalize;
+    font-size: 53px;
+}
+section.Login-conect {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 300px;
+    margin-bottom: 20px;
+}
+@media screen and (max-width: 770px){
+    section.Login-conect{
+        margin-bottom: 320px;
+    }
+}
+
+.container-father {
+    background-color:  #003049;
     border: rgb(190, 162, 2) solid 5px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 100px 40px;
     border-radius: 30px;
+    width: 90%;
+    max-width: 600px;
 }
-input{
-    padding:10px;
+
+.container-father input {
+    padding: 10px;
     width: 100%;
     border-radius: 10px;
     margin-top: 10px;
@@ -43,49 +93,68 @@ input{
     border: none;
     background-color: #fff;
 }
-.campo-user img{
-    position: absolute;
-    right: 430px;
-    top: 105px;
-}
-.campo-senha img{
-    position: absolute;
-    top: 145px;
-    right: 430px;
-}
-.container-father button{
-    margin-top: 15px;
-    background-color: #fff;
-    border-radius: 10px;
-    font-size: 18px;
-    padding: 5px;
-    outline: 0;
-    border: 0;
-}
-.Login-conect a{
-    margin-top: 10px;
-    text-align: center;
-    color: #fff;
+
+div.campo-user, div.campo-senha {
+    width: 100%;
+    position: relative;
 }
 
-footer{
-    border-top: rgba(128, 128, 128, 0.418) solid 3px;
-    background-color: #fff;
+div.campo-user img, div.campo-senha img {
+    position: absolute;
+    top: 15px;
+    right: 185px;
+}
+
+.container-father button {
+    margin-top: 15px;
+    background-color: #c0a300;
+    border-radius: 10px;
+    font-size: 18px;
+    padding: 10px 20px;
+    outline: 0;
+    border: 0;
+    transition: 0.3s ease;
+    width: 100%;
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 30px;
-    position: absolute;
-    bottom: 0;
-    cursor: pointer;
 }
 
-.text-rights{
+.container-father button:hover {
+    background-color: #ffd900;
+}
+
+.container-father button#logout a {
+    color: black;
+    text-transform: capitalize;
+    font-family: 'Poppins', sans-serif;
+}
+
+.Login-conect p a {
+    margin-top: 10px;
+    text-align: center;
+    color: #003cff;
+    font-family: 'Poppins', sans-serif;
+    display: block;
+}
+
+footer {
+    border-top: rgba(128, 128, 128, 0.418) solid 3px;
+    background-color: #ffc400;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+}
+
+.text-rights {
     font-size: 15px;
     text-align: center;
     font-family: "Roboto", sans-serif;
-    margin-left: 5px;
     font-weight: 500;
-    color: #8a8a8a;
+    color: #000000;
 }
