--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ body {
     }
 }
 
-header {
+aside {
     width: 100%;
     max-width: 600px;
     height: auto;
@@ -32,14 +32,14 @@ header {
     margin-right: 150px;
 }
 @media screen and (max-width: 770px){
-    header{
+    aside{
         margin-right: 0;
         margin-bottom: 0px;
         position: relative;
         top: 60px;
     }
 }
-header img {
+aside img {
     width: 100%;
     max-width: 500px;
     height: auto;
@@ -47,9 +47,7 @@ header img {
 }
 div.text-login{
     position: absolute;
-    right:700px;
     top: 350px;
-    width: 300px;
 }
 div h1.title-login{
     color: #fff;
@@ -83,8 +81,7 @@ section.Login-conect {
     width: 90%;
     max-width: 600px;
     position: relative;
-    right: 230px;
-}
+} 
 
 .container-father input {
     padding: 10px;
@@ -170,7 +167,7 @@ footer {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 50px;
+    height: 30px;
     position: fixed;
     bottom: 0;
 }
@@ -181,4 +178,39 @@ footer {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     color: #000000;
+}
+
+
+.title-login {
+    display: flex;
+    gap: 10px;
+    color: #fff;
+    font-family: "Archivo Black", sans-serif;
+    text-transform: uppercase;
+    font-size: 53px;
+}
+
+.title-login span {
+    opacity: 0;
+    animation: fadeIn 4.2s infinite;
+}
+
+.title-login span:nth-child(1) { animation-delay: 0s; }
+.title-login span:nth-child(2) { animation-delay: 0.3s; }
+.title-login span:nth-child(3) { animation-delay: 0.6s; }
+.title-login span:nth-child(4) { animation-delay: 0.9s; }
+.title-login span:nth-child(5) { animation-delay: 1.2s; }
+.title-login span:nth-child(6) { animation-delay: 1.5s; }
+.title-login span:nth-child(7) { animation-delay: 1.8s; }
+.title-login span:nth-child(8) { animation-delay: 2.1s; }
+
+@keyframes fadeIn {
+    0%, 100% {
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    50% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
