--- a/paginas/treinamento/treinamento.css
+++ b/paginas/treinamento/treinamento.css
@@ -11,30 +11,37 @@ body{
     overflow: scroll;
 }
 
-
 ul#cursos-list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center; /* Centraliza os itens horizontalmente */
-    gap: 50px; /* Espaçamento entre os itens */
+    justify-content: center;
+    gap: 50px;
     padding: 0;
     margin: 0;
     margin-top: 50px;
-    /* Remove o width e height para permitir que os itens se ajustem automaticamente */
 }
 li {
-    width: 150px; /* Define a largura dos itens */
-    height: 215px; /* Define a altura dos itens */
-    background-color: #04051D; /* Apenas para visualização */
+    width: 150px;
+    height: 215px;
+    background-color: #04051D;
     font-family: 'poppins', sans-serif;
     text-align: center;
     display: flex;
     color: white;
     flex-direction: column;
-    justify-content: center; /* Centraliza o conteúdo dentro do item */
-    align-items: center; /* Centraliza o conteúdo verticalmente dentro do item */
+    justify-content: center;
+    align-items: center;
 }
+
+li img.curso-imagem {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
 li a{
     color: white;
     text-decoration: none;
