--- a/paginas/home/home.css
+++ b/paginas/home/home.css
@@ -15,157 +15,37 @@ body{
     font-size: 12px;
     overflow: hidden;    
 }   
-header{
-    width: 60%;
-    height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 1200px;
-    margin: auto ;
-    z-index: 1;
-    position: relative;
-    top: 25px;
-    list-style: none;
-    background-color: rgba(0, 0, 0, .1);
-    backdrop-filter: blur(50px);
-    border-radius: 20px;
-}
-
-ul li{
-    display: inline-block;
-    position: relative;
-}
-ul li a{
-    display: block;
-    padding: 17px 25px;
-    color:#fff;
-    text-decoration: none;
-    text-align: center;
-    font-size: 20px;
-    transition: 0.4s ;
-    cursor: pointer;
-}
-@media screen and (max-width:1310px) {
-    ul li a{
-        display: none;
-    }
-    .text-home{
-        display: block;
-    }
-    header{
-        width: 40%;
-        justify-content: left;
-    }
-}
-ul li ul.dropdown li{
-    display: block;
-}
-ul li ul.dropdown{
+header .container-header{
+    background-color: #04051D;
     width: 100%;
-    background-color: #000000;
-    border-radius: 20px;
+    max-width: 100%;
+    height: 180px;
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+    align-items: center;
     position: absolute;
-    z-index: 999;
-    display: none;
+    z-index: 2;
+    padding: 40px;
 }
-ul li:hover ul.dropdown{
-    position: absolute;
-    top: 1;
+@media screen and  (max-width: 900px){
+    .container-header .nav-home, .container-header .nav-home a {
+        display: none;
+    }       
 }
-ul li a:hover{
-    background-color: rgb(255, 255, 255);
-    color: black;
-    border-radius: 10px;
-}
-.icon-suspend{
-    position: relative;
-    top: 4px;
-}
-span.icon-set {
-    display: inline-block;
-    transform: rotate(90deg);
-    font-weight: 600;
-    
+.container-header .nav-home,
+.container-header .nav-home a {
+    color: #ffffff;
+    font-size: 20px;
+    display: flex;
+    margin-right: 50px;
 }
 
-ul li:hover ul.dropdown{
-    display: block;
-    border-radius: 10px;
-}
-
-header{
-    transform: translateY(50px);
-    filter: blur(20px);
-    opacity: 0;
-    animation-delay: 1s;
-    animation: animationHt 0.5s 0.4s linear 1 forwards;
-}
-@keyframes animationHt{
-    to{
-        transform: translateY(0);
-        filter: blur(0);
-        opacity: 1;
-    }
-}
-
-
-
-header > ul > li{
-    transform: translateY(50px);
-    filter: blur(20px);
-    opacity: 0;
-    animation: showContent 0.5s 1s linear 1 forwards;
-}
-@keyframes showContent{
-    to{
-        transform: translateY(0);
-        filter: blur(0);
-        opacity: 1;
-    }
-}
-.dropdown  li{
-transform: translateY(50px);
-filter: blur(20px);
-opacity: 0;
-animation-delay: 0.3s;
-animation: showTop 0.5s 0.5s linear 1 forwards;
-}
-@keyframes showTop{
-to{
-    transform: translateY(0);
-    filter: blur(0);
-    opacity: 1;
-}
-}
-.dropdown{
-
-    transform: translateY(50px);
-    filter: blur(20px);
-    opacity: 0;
-    animation: showl 0.5s 0.1s linear 1 forwards;
-    }
-
-    @keyframes showl{
-    to{
-        transform: translateY(0);
-        filter: blur(0);
-        opacity: 1;
-    }
-    }
-
-.mobile-menu-icon{
-    display: none;
-}
-.mobile-menu{
-    display: none;
-}
 .container{
     height: 100vh;
     width: 100vw;
-    margin-top: -70px;
+    display: none;
 }
-
 .container .list .list-item{
     width: 100%;
     height: 100%;
@@ -254,6 +134,7 @@ to{
 .container .thumb .thumb-item{
     width: 135px;
     height: 200px;
+    display: none;
     position: relative;
     z-index: 3;
 }
@@ -285,14 +166,14 @@ to{
     align-items: center;
     gap: 10px;
     position: absolute;
-    bottom: 85px;
-    left: 180px;
+    bottom: 145px;
+    left: 350px;
     width: 300px;
 }
 .container .arrows button{
     border-radius: 10px;
     border: none;
-    padding: 12px 17px;
+    padding: 19px 25px;
     background-color: #eee4;
     color: white;
     cursor: pointer;
