--- a/paginas/home/home.css
+++ b/paginas/home/home.css
@@ -28,11 +28,6 @@ header .container-header{
     z-index: 2;
     padding: 40px;
 }
-@media screen and  (max-width: 900px){
-    .container-header .nav-home, .container-header .nav-home a {
-        display: none;
-    }       
-}
 .container-header .nav-home,
 .container-header .nav-home a {
     color: #ffffff;
@@ -40,7 +35,43 @@ header .container-header{
     display: flex;
     margin-right: 50px;
 }
-
+.icon-menu img{
+    display: none;
+}
+@media screen and  (max-width: 900px){
+    header .container-header{
+        justify-content: space-between;
+    }
+    .hideOnMobile{
+        display: none !important; 
+    }
+    .icon-menu img{
+        display: block;
+    }
+}
+div.sidebar{ 
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    background-color: black;
+    display: none;
+    gap: 50px;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+div.sidebar a{
+    width: 100%;
+    margin-top: 50px;
+    color: #fff;
+    padding: 10px;
+    font-size: 23px;
+}
+div.sidebar a:hover{
+    filter: brightness(20%);
+}
 .container{
     height: 100vh;
     width: 100vw;
