--- a/paginas/home/home.css
+++ b/paginas/home/home.css
@@ -28,6 +28,7 @@ header .container-header{
     z-index: 2;
     padding: 40px;
 }
+
 .container-header .nav-home,
 .container-header .nav-home a {
     color: #ffffff;
@@ -343,5 +344,25 @@ div.sidebar a:hover{
     height: auto;
 }
 
-    
-    
+.blog-content {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
+.blog-imagem {
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    margin-right: 15px;
+}
+
+.blog-texto {
+    display: flex;
+    flex-direction: column;
+    color: black;
+}
+
+.blog-container {
+    margin-bottom: 30px;
+}
