--- a/paginas/treinamento/treinamento.css
+++ b/paginas/treinamento/treinamento.css
@@ -8,7 +8,29 @@
 }
 
 body{
-    overflow: scroll;
+    background-color: #fff;
+}
+
+header .header-training{
+    width: 100%;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #04051D;
+}
+nav.nav-header a{
+    color: #fff;
+    font-size: 23px;
+    font-family: 'poppins', sans-serif;
+}
+
+.logo-riofer img{
+    width: 10vw;
+}
+
+div#main-content{
+    padding: 40px;
 }
 
 ul#cursos-list {
@@ -16,30 +38,32 @@ ul#cursos-list {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 50px;
+    gap: 10rem;
     padding: 0;
     margin: 0;
     margin-top: 50px;
 }
 li {
-    width: 150px;
-    height: 215px;
+    width: 200px;
+    height: 100%;
+    border-radius: 20px;
     background-color: #04051D;
     font-family: 'poppins', sans-serif;
     text-align: center;
     display: flex;
     color: white;
+    font-size: 14px;
+    padding-bottom: 2%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-li img.curso-imagem {
-    width: 150px;
-    height: 150px;
+img.curso-imagem {
+    width: 100%;
+    height: 194px;
+    border-radius: 15px 15px 0 0;
     object-fit: cover;
-    border-radius: 8px;
-    margin-bottom: 10px;
 }
 
 li a{
@@ -50,4 +74,6 @@ li a{
 h2{
     color: #fff;
     font-family: 'poppins', sans-serif;
+    text-align: center;
 }
+
