--- a/paginas/loadingpage/carregamento.css
+++ b/paginas/loadingpage/carregamento.css
@@ -7,7 +7,9 @@ div#loading-page.loader{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  background-color: #04051D;
   
 }
 
