--- a/paginas/home/home.css
+++ b/paginas/home/home.css
@@ -27,7 +27,12 @@ header .container-header{
     z-index: 2;
     padding: 40px;
 }
-
+.user-info {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    color: white;
+}
 .container-header .nav-home {
     color: #ffffff;
     font-size: 20px;
