--- a/paginas/chamados/formulario.css
+++ b/paginas/chamados/formulario.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root{
     --color-white: #fff;
     --color-red: #e63636;
@@ -10,8 +11,8 @@
 *{
     margin: 0;
     padding: 0;
-    align-items: left;
-    transition: 0.7s;
+    box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
@@ -22,36 +23,37 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 64vh;
+    width: 100vw;
 }
 .content{
     background-color: #04051D;
-    padding: 2rem;
+    padding: 40px 30px;
     border: gold 4px solid;
+    margin-top: 210px;
     border-radius: 10px;
-    min-width: 30%;
-    overflow: auto;
+    min-width: 29%;
     box-shadow: 10px 10px 10px rgb(0, 0, 0);
 }
 h1{
-    margin-bottom: 1rem;
     text-align: center;
-    font-family: 'archivo black' , sans-serif;
+    font-family: 'poppins' , sans-serif;
     
 }
 .content form{
     display: flex;
     flex-direction: column;
-    gap:1rem
+    gap: 0.5rem;
+    
 }
 .span-required{
     display: none;
 }
 .inputs{
-    padding: 8px 5px;
+    padding: 10px;
     outline: none;
     border-radius: 5px;
-    background-color: var(--color-dark1);
+    background-color: white;
     border: solid 2px var(--color-dark1);
     color: var(--color-white);
     width: 100%;
@@ -59,7 +61,12 @@ h1{
     transition: .3s;
 }
 .inputs:focus{
-    border-color: rgb(212, 175, 55);
+    border-color:  gold;
+
+}
+textarea#descricao{
+    border-radius: 5px;
+    padding: 0px;
 }
 option{
     font-size: 20px;
@@ -67,14 +74,14 @@ option{
     color: #fff;
 }
 select{
-    background-color: #181818;
-    color: #fff;
+    background-color: #ffffff;
+    color: #000000;
     border: none;
     outline: none;
 }
 #categoria{
-    height: 30px;
-    border-radius: 10px;
+    padding: 10px;
+    border-radius: 5px;
 }
 .box-select{
     display: flex;
@@ -84,8 +91,8 @@ select{
 }
 #nivel{
     width:100%;
-    height: 30px;
-    border-radius: 10px;
+    padding: 10px;
+    border-radius: 5px;
 }
 button[type="submit"]{
     padding: 1rem;
@@ -93,8 +100,8 @@ button[type="submit"]{
     outline: none;
     border-radius: 5px;
     margin-top: 1rem;
-    background-color: rgb(255, 196, 0);
-    color: var(--color-white);
+    background-color: gold;
+    color: black;
     width: 100%;
     border:none;
     cursor: pointer;
@@ -102,7 +109,7 @@ button[type="submit"]{
 }
 
 button[type="submit"]:hover{
-    background-color: #ff7300;
+    filter: brightness(70%);
 }
 @media screen and (max-widht: 576px) {
     .box-select{
