--- a/paginas/cadastro/cadastro.css
+++ b/paginas/cadastro/cadastro.css
@@ -9,8 +9,28 @@ body{
     background-color:#04051D;
     width: 100vw;
     height: 100vh;
+}
+header{
+    width: 100%;
+    padding: 30px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+}
+a#logout{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #ff0000;
+    text-decoration: none;
+    font-size: 22px;
+    transition: 0.3s ease;
+}
+a#logout:hover{
+    filter: brightness(70%);
+}
+a#logout img{
+    width: max(2.7vw, 50px);
+    transform: rotate(179.5deg);
 }
 form#cadastroForm input{
     width: 100%;
@@ -42,15 +62,13 @@ div.container-father{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 10vh;
+    margin: auto;
     border-radius: 10px;
     border: gold 4px solid;
-    box-shadow: 0 0 15px rgb(0, 0, 0);
+    box-shadow: 0 0 15px #000;
     padding: 20px 40px;
     padding-bottom: 50px;
-    width: 40vw;
     max-width: 600px;
-    min-width: 30%;
     background-color: #04051D;
     color: white;
 }
