--- a/paginas/treinamento/cadastroTreinamento.css
+++ b/paginas/treinamento/cadastroTreinamento.css
@@ -32,40 +32,27 @@ form#curso-form button:focus{
     cursor: wait;
 }
 form#curso-form button:hover {
-    background-color: #ffd900;
-    animation-name: anima;
-    animation-duration: 0.5s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count:infinite;
-    animation-direction:alternate;
-}
-@keyframes anima{
-    0%{
-        transform: scale(1);
-    }
-    100%{
-        transform: scale(1.05);
-    }
+   filter: brightness(70%);
+   transition: 0.3s ease;
 }
 label,p,h2{
     color: #fff;
 }
 form input{
-    background-color: rgb(29, 29, 29);
-    border: solid 2px rgb(48, 48, 48);
+    background-color: #fff;
+    border: none;
     color: #fff;
     padding: 10px;
     width: 100%;
     border-radius: 10px;
-    border: solid 2px rgb(48, 48, 48);
     outline: none;
 }
 form textarea{
     padding: 8px 5px;
     outline: none;
     border-radius: 5px;
-    background-color: rgb(29, 29, 29);
-    border: solid 2px rgb(41, 41, 41);
+    background-color: #fff;
+    border: none;
     color: white;
     width: 100%;
     height: 100px;
@@ -74,32 +61,19 @@ form textarea{
 }
 option{
     font-size: 20px;
-    background-color: rgb(29, 29, 29);
-    border: solid 2px rgb(48, 48, 48);
-    border-radius: 10px;
-    color: #fff;
+    background-color: #fff;
+    border: none;
+    border-radius: 5px;
+    color: #000;
 }
 select{
-    background-color: rgb(29, 29, 29);
-    border: solid 2px rgb(48, 48, 48);
-    height: 100px;
-    color: #fff;
-    border-radius: 10px;
+    background-color: #fff;
+    border: none;
+    width: 100%;
+    color: #000;
     outline: none;
 }
 #categoria{
-    height: 30px;
-    border-radius: 10px;
-}
-.box-select{
-    display: flex;
-    justify-content: space-between;
-    font-weight:bold;
-    gap: 1rem;
-
-}
-#nivel{
-    width:100%;
-    height: 50px;
-    border-radius: 10px;
+    border-radius: 5px;
+    padding: 10px;
 }
