--- a/paginas/home/home.css
+++ b/paginas/home/home.css
@@ -14,7 +14,7 @@ body{
     font-size: 12px;
     width: 100vw;
     height: 100vh;
-    overflow: scroll;    
+    overflow: scroll;  
 }   
 header .container-header{
     background-color: #04051D;
@@ -132,4 +132,15 @@ main .blogs-container{
 
 .blog-container {
     margin-bottom: 30px;
+}
+
+main .blogs-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.blog-container {
+    width: 30%;
+    margin-bottom: 20px;
 }
