--- a/paginas/treinamento/cadastroTreinamento.css
+++ b/paginas/treinamento/cadastroTreinamento.css
@@ -8,25 +8,52 @@
 }
 body{
     background-color: #04051D;
+    width: 100vw;
+    height: 100vh;
+}
+header{
+    width: 100%;
+    padding: 30px;
+    display: flex;
+    justify-content: flex-end;
+}
+a#logout{
     display: flex;
     flex-direction: column;
-    align-items:center;
-    justify-content: center;
+    align-items: center;
+    color: #ff0000;
+    text-decoration: none;
+    font-size: 22px;
+    transition: 0.3s ease;
+}
+a#logout:hover{
+    filter: brightness(70%);
+}
+a#logout img{
+    width: max(2.7vw, 50px);
+    transform: rotate(179.5deg);
 }
 form{
     background-color: #04051D;
     border: gold 3px solid;
-    padding: 20px;
+    padding: 20px 40px;
+    padding-bottom: 50px;
+    max-width: 600px;
     border-radius: 10px;
-    margin-top: 17px;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
 }
-
+form#curso-form h2{
+    text-align: center;
+}
 form#curso-form button{
     padding: 10px;
     border-radius: 10px;
     width: 100%;
     background-color: gold;
     font-size: 17px;
+    margin-top: 10px;
 }
 form#curso-form button:focus{
     cursor: wait;
@@ -41,21 +68,19 @@ label,p,h2{
 form input{
     background-color: #fff;
     border: none;
-    color: #fff;
+    color: #000;
     padding: 10px;
     width: 100%;
-    border-radius: 10px;
+    border-radius: 5px;
     outline: none;
 }
 form textarea{
-    padding: 8px 5px;
     outline: none;
     border-radius: 5px;
     background-color: #fff;
     border: none;
-    color: white;
+    color: #000;
     width: 100%;
-    height: 100px;
     box-sizing: border-box;
     transition: .3s;
 }
