--- a/paginas/treinamento/modulos/modulos.css
+++ b/paginas/treinamento/modulos/modulos.css
@@ -37,17 +37,17 @@ a#logout img{
 article#Training-Box{
     display: flex;
     flex-direction: column;
-    background-color: #04051D;
+    background-color: #111111;
     color: #fff;
-    border: solid 4px gold;
-    border-radius: 10px;
-    margin-left: 5%;
-    width: max(300px,25vw);
+    border-radius: 15px;
+    margin: auto;
+    width: max(300px,20vw);
 } 
 img#curso-imagem{
     width: 100%;
-    height: 100%;
-    border-radius: 4px 4px 0 0;
+    height: 25vh;
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
 }
 div.texts-modules{
     padding:  7px 20px; 
@@ -91,4 +91,10 @@ div.inputs-texts button{
 }
 div.inputs-texts button:hover{
     filter: brightness(70%);
+}
+h2#curso-titulo{
+    padding: 10px 16px;
+}
+p#curso-descricao{
+    padding-left: 20px;
 }
