--- a/paginas/home/home.css
+++ b/paginas/home/home.css
@@ -10,15 +10,15 @@
 }
 
 body{
-    background: #ffffff;
     color: #04051D;
     font-size: 12px;
     width: 100vw;
     height: 100vh;
     overflow: scroll;
 }   
-
-
+div#main-content{
+    width: 100vw;
+}
 header .container-header{
     background-color: #04051D;
     width: 100%;
@@ -102,25 +102,35 @@ div.sidebar a{
 div.sidebar a:hover{
     filter: brightness(20%);
 }
-section {
+section.section-welcome{
     width: 100%;
-    background-color: gold;
+    height: 70vh;
+    background-image: url(/paginas/home/images-home/Cópia\ de\ RH\ -\ TREINAMENTO.jpg);
+    filter: brightness(50%);
+    background-size: cover;
+    background-position: top;
+    object-fit: cover;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
 }
 div.texts-welcome{
-    width: 40%;
-    font-size: 2vw;
-    margin-left: 17.5vw;    
+    max-width: 70vw;
+    font-size: max(20px,1.5vw);   
 }
-@media (max-width:450px){
+@media (max-width:820px){
     .texts-welcome{
         display: none;
     }
+    section.section-welcome{
+        height: auto;
+    }
 }
 .user-info{
-    color: #000;
-    font-size: 5vw;
-    font-weight: 500;
-    margin-left: 17.5vw;    
+    color: #fff;
+    font-size: max(20px,3vw);
+    font-weight: 500;    
 }
 @media (max-width:450px){
         .user-info{
@@ -172,11 +182,11 @@ main h1{
 main{
     padding: 0 0 80px 0;
 }
-
 main .blogs-container {
     display: grid ;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
+    grid-template-columns: repeat(auto-fill, minmax(300px, 3fr)); 
     gap: 4.8rem;
-    max-width: 1200px;
-    margin: auto;   
+    max-width: 1500px;
+    margin: auto;
+    
 }
